--- a/index.css
+++ b/index.css
@@ -9,10 +9,11 @@
 @media only screen and (min-width :768px )and (max-width :991px)
 {
 	.container > div
-	{max-width: 49%;
+	{width: 49%;
 	margin-top: 10px;
-margin-bottom: 10px;}
-	#sec1
+margin-bottom: 10px;
+}
+#sec1
 	{
 		margin-right: 10px;		
 	}
